# lookup-tables

./: Cargo.toml  README.md  build.rs  justfile
benches/: bench_table1d.rs
src/: axis.rs  bound.rs  common.rs  lib.rs  search.rs  table1d.rs  table2d.rs  table3d.rs
tests/: lookup_table_1d_cases.json  table1d_test_cases.py
tests/integration/: main.rs  table1d.rs
