[package]
name = "lookup-tables"
version = "0.1.0"
edition = "2021"
description = "High performance & compile-time customizable lookup tables"
license = "GPL-3.0"

[dependencies]
ndarray = { version = "0.16.1", optional = true }

[dev-dependencies]
float_eq = "1.0.1"
nalgebra = "0.33.2"
ndarray-rand = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tango-bench = "0.5"

[features]
ndarray = ["dep:ndarray"]
default = ["ndarray"]

[[bench]]
name = "bench_table1d"
harness = false

